[tool.poetry]
name = "contest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.11b1"
jupyter = "^1.0.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
